--- a/index.html
+++ b/index.html
@@ -509,6 +509,17 @@
                     invoiceModal.querySelector('#invoice-modal-title').textContent = '新增帳務';
                     invoiceModal.querySelector('#invoice-modal-submit-btn').textContent = '儲存帳單';
                     invoiceModal.querySelector('#invoiceId').value = '';
+                    
+                    const now = new Date();
+                    const year = now.getFullYear();
+                    const month = String(now.getMonth() + 1).padStart(2, '0');
+                    const day = String(now.getDate()).padStart(2, '0');
+                    const hours = String(now.getHours()).padStart(2, '0');
+                    const minutes = String(now.getMinutes()).padStart(2, '0');
+                    const seconds = String(now.getSeconds()).padStart(2, '0');
+                    const newInvoiceNumber = `WDC-${year}${month}${day}-${hours}${minutes}${seconds}`;
+                    invoiceModal.querySelector('#invoiceNumber').value = newInvoiceNumber;
+
                     invoiceModal.querySelector('#invoiceIssueDate').value = new Date().toISOString().split('T')[0];
                     addInvoiceItem(); // Add one item by default
                 } else if (invoiceId) {
